5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4057/executions/1643_2445.log
== SUBMITION (2019-04-13 22:04:39) 
-- CODE:
escala = input("qual tipo de temperatura? c = Celsius ou f = fahrenheit ")
valor = float(input("Qual o valor da temperatura? "))
if (escala == s) :
	b = valor * (5/9) + 32
	print(round(b, 2))
else :
	b = (valor - 32)*(5/9)
	print(round(b, 2))
-- EXECUTION TIME:
0.166787
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2445/main.py", line 3, in <module>
    if (escala == s) :
NameError: name 's' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:04:43) 
-- CODE:
escala = input("qual tipo de temperatura? c = Celsius ou f = fahrenheit ")
valor = float(input("Qual o valor da temperatura? "))
if (escala == s) :
	b = valor * (5/9) + 32
	print(round(b, 2))
else :
	b = (valor - 32)*(5/9)
	print(round(b, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (escala == s) :
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 22:05:07) 
-- CODE:
escala = input("qual tipo de temperatura? c = Celsius ou f = fahrenheit ")
valor = float(input("Qual o valor da temperatura? "))
if (escala == "s") :
	b = valor * (5/9) + 32
	print(round(b, 2))
else :
	b = (valor - 32)*(5/9)
	print(round(b, 2))
-- EXECUTION TIME:
0.13585
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:05:11) 
-- CODE:
escala = input("qual tipo de temperatura? c = Celsius ou f = fahrenheit ")
valor = float(input("Qual o valor da temperatura? "))
if (escala == "s") :
	b = valor * (5/9) + 32
	print(round(b, 2))
else :
	b = (valor - 32)*(5/9)
	print(round(b, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:05:31) 
-- CODE:
escala = input("qual tipo de temperatura? c = Celsius ou f = fahrenheit ")
valor = float(input("Qual o valor da temperatura? "))
if (escala == "c") :
	b = valor * (5/9) + 32
	print(round(b, 2))
else :
	b = (valor - 32)*(5/9)
	print(round(b, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 22:05:45) 
-- CODE:
escala = input("qual tipo de temperatura? c = Celsius ou f = fahrenheit ")
valor = float(input("Qual o valor da temperatura? "))
if (escala == "c") :
	b = valor * (5/9) + 32
	print(round(b, 2))
else :
	b = (valor - 32)*(5/9)
	print(round(b, 2))
-- EXECUTION TIME:
0.191359
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:06:02) 
-- CODE:
escala = input("qual tipo de temperatura? c = Celsius ou f = fahrenheit ")
valor = float(input("Qual o valor da temperatura? "))
if (escala == "c") :
	b = valor * (5/9) + 32
	print(round(b, 2))
else :
	b = (valor - 32)*(5/9)
	print(round(b, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:07:18) 
-- CODE:
escala = input("qual tipo de temperatura? c = Celsius ou f = fahrenheit ")
valor = float(input("Qual o valor da temperatura? "))
if (escala == "c") :
	b = (valor + 32)* (5/9)
	print(round(b, 2))
else :
	b = (valor - 32)*(5/9)
	print(round(b, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:09:38) 
-- CODE:
escala = input("qual tipo de temperatura? c = Celsius ou f = fahrenheit ")
valor = float(input("Qual o valor da temperatura? "))
if (escala == "c") :
	b = (valor + 32) * 5/9
	print(round(b, 2))
else :
	b = (valor - 32)*(5/9)
	print(round(b, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:10:39) 
-- CODE:
escala = input("qual tipo de temperatura? c = Celsius ou f = fahrenheit ")
valor = float(input("Qual o valor da temperatura? "))
if (escala == "c") :
	b = ((valor + 32) * 5) / 9
	print(round(b, 2))
else :
	b = (valor - 32)*(5/9)
	print(round(b, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:11:07) 
-- CODE:
escala = input("qual tipo de temperatura? c = Celsius ou f = fahrenheit ")
valor = float(input("Qual o valor da temperatura? "))
if (escala == "c") :
	b = ((valor + 32) * 5) / 9
	print(round(b, 2))
else :
	b = (valor - 32)*(5/9)
	print(round(b, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:12:02) 
-- CODE:
escala = input("qual tipo de temperatura? c = Celsius ou f = fahrenheit ")
valor = float(input("Qual o valor da temperatura? "))
if (escala == "c") :
	b = (valor + 32)*(5/9)
	print(round(b, 2))
else :
	b = (valor - 32)*(5/9)
	print(round(b, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:13:35) 
-- CODE:
escala = input("qual tipo de temperatura? c = Celsius ou f = fahrenheit ")
valor = float(input("Qual o valor da temperatura? "))
if (escala == "c") :
	b = (valor*(5/9))+32
	print(round(b, 2))
else :
	b = (valor - 32)*(5/9)
	print(round(b, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:13:53) 
-- CODE:
escala = input("qual tipo de temperatura? c = Celsius ou f = fahrenheit ")
valor = float(input("Qual o valor da temperatura? "))
if (escala == "c") :
	b = (valor*5/9)+32
	print(round(b, 2))
else :
	b = (valor - 32)*(5/9)
	print(round(b, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:14:13) 
-- CODE:
escala = input("qual tipo de temperatura? c = Celsius ou f = fahrenheit ")
valor = float(input("Qual o valor da temperatura? "))
if (escala == "c") :
	b = (valor*1.8)+32
	print(round(b, 2))
else :
	b = (valor - 32)*(5/9)
	print(round(b, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:14:47) 
-- CODE:
escala = input("qual tipo de temperatura? c = Celsius ou f = fahrenheit ")
valor = float(input("Qual o valor da temperatura? "))
if (escala == "c") :
	b = (valor*1.8)+32
	print(round(b, 2))
else :
	b = (valor - 32)*(1.8)
	print(round(b, 2))
-- OUTPUT:
518.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 22:15:08) 
-- CODE:
escala = input("qual tipo de temperatura? c = Celsius ou f = fahrenheit ")
valor = float(input("Qual o valor da temperatura? "))
if (escala == "c") :
	b = (valor*1.8)+32
	print(round(b, 2))
else :
	b = (valor - 32)*(5/9)
	print(round(b, 2))
-- EXECUTION TIME:
0.20156
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 22:15:58) 
-- CODE:
escala = input("qual tipo de temperatura? c = Celsius ou f = fahrenheit ")
valor = float(input("Qual o valor da temperatura? "))
if (escala == "c") :
	F = (valor*1.8)+32
	print(round(F, 2))
else :
	C = (valor - 32)*(5/9)
	print(round(C, 2))
-- EXECUTION TIME:
0.12602
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 22:19:15) 
-- CODE:
escala = input("Escala em que a temperatura está representada: C para Celsius, ou F para Fahrenheit ")
valor = float(input("Qual o valor da temperatura? "))
if (escala.upper() == "F") :
	C = (valor - 32)*(5/9)
	print(round(C, 2))
else :
	F = (valor*1.8)+32
	print(round(F, 2))
-- EXECUTION TIME:
0.142986
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
